[package]
name = "tcp-vector"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
tokio-util = { version = "0.2", features = ["codec"] }
structopt = "0.3"
rand = "0.7"